--- a/template.html
+++ b/template.html
@@ -39,6 +39,12 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+  <!-- Loading Screen Section -->
+  <div id="loading-screen" class="loader-wrapper">
+    <div class="loading">
+      <span></span><span></span><span></span><span></span><span></span>
+    </div>
+  </div>
   <!-- Header Content Section -->
   <header>
     <nav class="top-nav-bar">
